init spring cloud with spring boot

--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,41 @@
     </modules>
 
     <properties>
-        <spring.cloud-version>Hoxton.SR8</spring.cloud-version>
+        <!-- Spring Cloud 的版本号并不是我们通常见的数字版本号，而是一些很奇怪的单词。
+        这些单词均为英国伦敦地铁站的站名。同时根据字母表的顺序来对应版本时间顺序，
+        比如：最早 的 Release 版本 Angel，第二个 Release 版本 Brixton（英国地名），
+        然后是 Camden、 Dalston、Edgware、Finchley、Greenwich、Hoxton-->
+        <spring.cloud-version>Greenwich.SR5</spring.cloud-version>
+
+        <!-- spring boot和spring cloud的版本有较为严格的对应关系，如果高版本cloud配低版本boot，
+        一般情况下是启动不了的，会报各种错误-->
+        <!-- "spring-cloud":{
+        "Finchley.M2":"Spring Boot >=2.0.0.M3 and <2.0.0.M5",
+        "Finchley.M3":"Spring Boot >=2.0.0.M5 and <=2.0.0.M5",
+        "Finchley.M4":"Spring Boot >=2.0.0.M6 and <=2.0.0.M6",
+        "Finchley.M5":"Spring Boot >=2.0.0.M7 and <=2.0.0.M7",
+        "Finchley.M6":"Spring Boot >=2.0.0.RC1 and <=2.0.0.RC1",
+        "Finchley.M7":"Spring Boot >=2.0.0.RC2 and <=2.0.0.RC2",
+        "Finchley.M9":"Spring Boot >=2.0.0.RELEASE and <=2.0.0.RELEASE",
+        "Finchley.RC1":"Spring Boot >=2.0.1.RELEASE and <2.0.2.RELEASE",
+        "Finchley.RC2":"Spring Boot >=2.0.2.RELEASE and <2.0.3.RELEASE",
+        "Finchley.SR4":"Spring Boot >=2.0.3.RELEASE and <2.0.999.BUILD-SNAPSHOT",
+        "Finchley.BUILD-SNAPSHOT":"Spring Boot >=2.0.999.BUILD-SNAPSHOT and <2.1.0.M3",
+        "Greenwich.M1":"Spring Boot >=2.1.0.M3 and <2.1.0.RELEASE",
+        "Greenwich.SR5":"Spring Boot >=2.1.0.RELEASE and <2.1.14.BUILD-SNAPSHOT",
+        "Greenwich.BUILD-SNAPSHOT":"Spring Boot >=2.1.14.BUILD-SNAPSHOT and <2.2.0.M4",
+        "Hoxton.SR1":"Spring Boot >=2.2.0.M4 and <2.2.6.BUILD-SNAPSHOT",
+        "Hoxton.BUILD-SNAPSHOT":"Spring Boot >=2.2.6.BUILD-SNAPSHOT and <2.3.0.M1"
+        } -->
+
+        <spring.boot-version>2.1.14.RELEASE</spring.boot-version>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2020.0.1</version>
+                <version>${spring.cloud-version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -28,7 +55,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
-                <version>2.1.18.RELEASE</version>
+                <version>${spring.boot-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
