--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,7 @@
     <artifactId>usingSpringCloud</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>serviceRegister</module>
-    </modules>
+
 
     <properties>
         <!-- Spring Cloud 的版本号并不是我们通常见的数字版本号，而是一些很奇怪的单词。
@@ -57,8 +55,26 @@
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring.boot-version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.6.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
 
+    <modules>
+        <module>provider</module>
+        <module>consumer</module>
+        <module>EurekaServer</module>
+    </modules>
 </project>
